--- a/UsersGuide/CastroRadUserGuide.tex
+++ b/UsersGuide/CastroRadUserGuide.tex
@@ -308,18 +308,18 @@ on the right-hand side of the equal sign.
   
   If {\tt 1}, save radiation flux in plotfiles.
 
-\item {\tt radiation.plot_lab_flux = 0}
+\item {\tt radiation.plot\_lab\_flux = 0}
 
   For multi-group and comoving gray solvers, this determines the frame
   of the flux in plotfiles.  This flag has no effect if {\tt
-    radiation.plot_flux} is {\tt 0} or the mixed frame gray solver is
+    radiation.plot\_flux} is {\tt 0} or the mixed frame gray solver is
   used. 
 
-\item {\tt radiation.plot\_kappa_p = 0}
+\item {\tt radiation.plot\_kappa\_p = 0}
 
   If {\tt 1}, save Planck mean opacity in plotfiles.
 
-\item {\tt radiation.plot\_kappa_r = 0}
+\item {\tt radiation.plot\_kappa\_r = 0}
 
   If {\tt 1}, save Rosseland mean opacity in plotfiles.
 
