--- a/Docs/CastroRadUserGuide.tex
+++ b/Docs/CastroRadUserGuide.tex
@@ -264,6 +264,15 @@ The parameters describing the opacity include:
     \kappa = \mathrm{const}\ \rho^{m} T^{-n} \nu^{p}
     \left [1-\exp{\left (-\frac{h\nu}{k T} \right )} \right ].
   \end{equation}
+
+\item {\tt radiation.surface\_average = 2}
+
+ How the averaging of opacity is done from faces to center for
+ the radiation solver.  {\tt 0} is arithmetic averaging, {\tt 1}
+ is harmonic averaging, and {\tt 2} is a combination of the two.
+ This is implemented in {\tt RAD\_?D.F} in {\tt kavg}.
+
+
 \end{itemize}
 
 \noindent Note that the unit for opacities is $\mathrm{cm}^{-1}$.  For
@@ -272,7 +281,6 @@ of {\tt kappa\_r} and {\tt scattering}, whereas for the MG solver,
 there are two possibilities.  If {\tt const\_kappa\_r} is greater than
 0, then the total opacity is set by {\tt kappa\_r} alone, otherwise
 the total opacity is the sum of {\tt kappa\_p} and {\tt scattering}.
-
 
 
 \section{Radiation Solver Physics}
@@ -375,9 +383,6 @@ on the right-hand side of the equal sign.
       $F$ is the radiation flux, $E$ is the radiation energy density,
       and $c$ is the speed of light.
   \end{itemize}
-% \item[\ \ \ radiation.surface\_average = 2] \hfill \\
-%   In the discretization of the diffusion equation, the diffusion
-%   coefficients live on cell surfaces.  Thus averaging .....
 \end{itemize}
 
 Note the behavior of the radiative flux in the optically thin and
